--- a/src/containers/footer/footer.css
+++ b/src/containers/footer/footer.css
@@ -112,6 +112,12 @@
 
 	margin: 0.5rem 0;
 	cursor: pointer;
+	transition: all 0.3s ease 0s;
+}
+
+.gpt3__footer-links_div p:hover {
+	color: #f36545;
+	transform: scale(1.02);
 }
 
 .gpt3__footer-copyright {
